--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,25 +3,85 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>DeleteServlet</servlet-name>
-  	<display-name>DeleteServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.fssa.studentmanagementapp.servlet.DeleteServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>AddStudentServlet</servlet-name>
-  	<display-name>AddStudentServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.fssa.studentmanagementapp.servlet.AddStudentServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>DeleteServlet</servlet-name>
-  	<url-pattern>/DeleteServlet</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>AddStudentServlet</servlet-name>
-  	<url-pattern>/AddStudentServlet</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>StudentList</servlet-name>
+		<display-name>StudentList</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.StudentList</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>AssignStudent</servlet-name>
+		<display-name>AssignStudent</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.AssignStudent</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>AddStudentServlet</servlet-name>
+		<display-name>AddStudentServlet</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.AddStudentServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>FindByNameServlet</servlet-name>
+		<display-name>FindByNameServlet</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.FindByNameServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>StudentsByClass</servlet-name>
+		<display-name>StudentsByClass</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.StudentsByClass</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<display-name>LoginServlet</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RegistrationServlet</servlet-name>
+		<display-name>RegistrationServlet</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.RegistrationServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdateStudentClass</servlet-name>
+		<display-name>UpdateStudentClass</display-name>
+		<description></description>
+		<servlet-class>com.fssa.studentmanagementapp.servlet.UpdateStudentClass</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>StudentList</servlet-name>
+		<url-pattern>/StudentList</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AssignStudent</servlet-name>
+		<url-pattern>/AssignStudent</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AddStudentServlet</servlet-name>
+		<url-pattern>/AddStudentServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>FindByNameServlet</servlet-name>
+		<url-pattern>/FindByNameServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>StudentsByClass</servlet-name>
+		<url-pattern>/StudentsByClass</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RegistrationServlet</servlet-name>
+		<url-pattern>/RegistrationServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateStudentClass</servlet-name>
+		<url-pattern>/UpdateStudentClass</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
